# wire-cell-gen-sycl

./: README.md
.cmake-sycl/: CMakeLists.txt
.cmake-sycl-amd/: CMakeLists.txt
.cmake-sycl-amd/test/: CMakeLists.txt
.cmake-sycl-dpcpp/: CMakeLists.txt
.cmake-sycl-dpcpp/test/: CMakeLists.txt
.cmake-sycl-hipsycl-omp/: CMakeLists.txt
.cmake-sycl-hipsycl-omp/test/: CMakeLists.txt
.cmake-sycl/test/: CMakeLists.txt
cfg/pgrapher/common/sim/: nodes.jsonnet
cfg/pgrapher/experiment/pdsp/: sim.jsonnet
example/: sim.fcl  sim.jsonnet  wct-sim-check.jsonnet  wct-sim.jsonnet
inc/WireCellGenSycl/: BinnedDiffusion_transform.h  DepoTransform.h  GaussianDiffusion.h  GdData.h  ImpactData.h  ImpactTransform.h  SyclArray.h  SyclArray_cuda.h  SyclArray_fftw.h  SyclArray_hip.h  SyclEnv.h  syclcommon.h  test.h
src/: BinnedDiffusion_transform.cxx  DepoTransform.cxx  GaussianDiffusion.cxx  ImpactData.cxx  ImpactTransform.cxx  SyclEnv.cxx
test/: test_syclarray.cpp
